task 2 - compilation error for java 8